--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/image-url": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
     "motion": "^12.6.0",
