--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@sanity/image-url": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.13",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
     "motion": "^12.6.0",
@@ -33,6 +32,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
